--- a/Frontend/src/forms/UpdateUser.css
+++ b/Frontend/src/forms/UpdateUser.css
@@ -8,13 +8,13 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: #fff;
-  color: #a21232;
+  color: #6b3d7d;
 }
 
 h2 {
   padding-top: 3rem;
   font-family: 'Cambria';
-  color: #a21232;
+  color: #6b3d7d;
   text-align: center;
   margin-bottom: 2rem;
 }
@@ -46,7 +46,7 @@ button[type="submit"],
     padding: 0.75rem;
     border: none;
     border-radius: 5px;
-    background-color: #a21232;
+    background-color: #6b3d7d;
     color: white;
     font-family: 'Cambria';
     font-size: 1.25rem;
@@ -56,17 +56,17 @@ button[type="submit"],
 
 button[type="submit"]:hover,
 .btn-default:hover {
-  background-color: #a21232;
+  background-color: #6b3d7d;
   color: #fff;
 }
 
 .card-footer .btn-default {
-  background-color: #a21232;
-  border-color: #a21232;
+  background-color: #6b3d7d;
+  border-color: #6b3d7d;
   color: white;
 }
 
 .card-footer .btn-default:hover {
-  background-color: #a21232;
-  border-color: #a21232;
+  background-color: #6b3d7d;
+  border-color: #6b3d7d;
 }
